Added Release Notes link

--- a/File-Formats/Release-Notes/v13.4.0.53.md
+++ b/File-Formats/Release-Notes/v13.4.0.53.md
@@ -10,48 +10,48 @@ documentation: ug
 
 ## DocIO
 
-* [ASP.NET Release Notes](/aspnet/release-notes/v13.4.0.53#docio)
-* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v13.4.0.53#docio)
-* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v13.4.0.53#docio)
-* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v13.4.0.53#docio)
-* [WinRT Release Notes](/winrt/release-notes/v13.4.0.53#docio)
-* [Windows Phone Release Notes](/wp8/release-notes/wp-winrt/v13.4.0.53#docio)
-* [UWP Release Notes](/uwp/release-notes/v13.4.0.53#docio)
-* [Windows Forms Release Notes](/windowsforms/release-notes/v13.4.0.53#docio)
-* [WPF Release Notes](/wpf/release-notes/v13.4.0.53#docio)
-* [Xamarin.Forms Release Notes](/xamarin/release-notes/xamarin-forms/v13.4.0.53#docio)
+* [ASP.NET Release Notes](/aspnet/release-notes/v13.4.0.53#docio){:target="_blank"}
+* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v13.4.0.53#docio){:target="_blank"}
+* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v13.4.0.53#docio){:target="_blank"}
+* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v13.4.0.53#docio){:target="_blank"}
+* [WinRT Release Notes](/winrt/release-notes/v13.4.0.53#docio){:target="_blank"}
+* [Windows Phone Release Notes](/wp8/release-notes/wp-winrt/v13.4.0.53#docio){:target="_blank"}
+* [UWP Release Notes](/uwp/release-notes/v13.4.0.53#docio){:target="_blank"}
+* [Windows Forms Release Notes](/windowsforms/release-notes/v13.4.0.53#docio){:target="_blank"}
+* [WPF Release Notes](/wpf/release-notes/v13.4.0.53#docio){:target="_blank"}
+* [Xamarin.Forms Release Notes](/xamarin/release-notes/xamarin-forms/v13.4.0.53#docio){:target="_blank"}
 
 ## PDF
 
-* [ASP.NET Release Notes](/aspnet/release-notes/v13.4.0.53#pdf)
-* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v13.4.0.53#pdf)
-* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v13.4.0.53#pdf)
-* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v13.4.0.53#pdf)
-* [WinRT Release Notes](/winrt/release-notes/v13.4.0.53#pdf)
-* [Windows Phone Release Notes](/wp8/release-notes/wp-winrt/v13.4.0.53#pdf)
-* [UWP Release Notes](/uwp/release-notes/v13.4.0.53#pdf)
-* [Windows Forms Release Notes](/windowsforms/release-notes/v13.4.0.53#pdf)
-* [WPF Release Notes](/wpf/release-notes/v13.4.0.53#pdf)
-* [Xamarin.Forms Release Notes](/xamarin/release-notes/xamarin-forms/v13.4.0.53#pdf)
-* [Xamarin.Android Release Notes](/xamarin/release-notes/xamarin-android/v13.4.0.53#pdf)
-* [Xamarin.iOS Release Notes](/xamarin/release-notes/xamarin-android/v13.4.0.53#pdf)
+* [ASP.NET Release Notes](/aspnet/release-notes/v13.4.0.53#pdf){:target="_blank"}
+* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v13.4.0.53#pdf){:target="_blank"}
+* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v13.4.0.53#pdf){:target="_blank"}
+* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v13.4.0.53#pdf){:target="_blank"}
+* [WinRT Release Notes](/winrt/release-notes/v13.4.0.53#pdf){:target="_blank"}
+* [Windows Phone Release Notes](/wp8/release-notes/wp-winrt/v13.4.0.53#pdf){:target="_blank"}
+* [UWP Release Notes](/uwp/release-notes/v13.4.0.53#pdf){:target="_blank"}
+* [Windows Forms Release Notes](/windowsforms/release-notes/v13.4.0.53#pdf){:target="_blank"}
+* [WPF Release Notes](/wpf/release-notes/v13.4.0.53#pdf){:target="_blank"}
+* [Xamarin.Forms Release Notes](/xamarin/release-notes/xamarin-forms/v13.4.0.53#pdf){:target="_blank"}
+* [Xamarin.Android Release Notes](/xamarin/release-notes/xamarin-android/v13.4.0.53#pdf){:target="_blank"}
+* [Xamarin.iOS Release Notes](/xamarin/release-notes/xamarin-android/v13.4.0.53#pdf){:target="_blank"}
 
 ## Presentation
 
-* [ASP.NET Release Notes](/aspnet/release-notes/v13.4.0.53#presentation)
-* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v13.4.0.53#presentation)
-* [Windows Forms Release Notes](/windowsforms/release-notes/v13.4.0.53#presentation)
-* [WPF Release Notes](/wpf/release-notes/v13.4.0.53#presentation)
+* [ASP.NET Release Notes](/aspnet/release-notes/v13.4.0.53#presentation){:target="_blank"}
+* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v13.4.0.53#presentation){:target="_blank"}
+* [Windows Forms Release Notes](/windowsforms/release-notes/v13.4.0.53#presentation){:target="_blank"}
+* [WPF Release Notes](/wpf/release-notes/v13.4.0.53#presentation){:target="_blank"}
 
 ## XlsIO
 
-* [ASP.NET Release Notes](/aspnet/release-notes/v13.4.0.53#xlsio)
-* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v13.4.0.53#xlsio)
-* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v13.4.0.53#xlsio)
-* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v13.4.0.53#xlsio)
-* [WinRT Release Notes](/winrt/release-notes/v13.4.0.53#xlsio)
-* [Windows Phone Release Notes](/wp8/release-notes/wp-winrt/v13.4.0.53#xlsio)
-* [UWP Release Notes](/uwp/release-notes/v13.4.0.53#xlsio)
-* [Windows Forms Release Notes](/windowsforms/release-notes/v13.4.0.53#xlsio)
-* [WPF Release Notes](/wpf/release-notes/v13.4.0.53#xlsio)
-* [Xamarin.Forms Release Notes](/xamarin/release-notes/xamarin-forms/v13.4.0.53#xlsio)
+* [ASP.NET Release Notes](/aspnet/release-notes/v13.4.0.53#xlsio){:target="_blank"}
+* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v13.4.0.53#xlsio){:target="_blank"}
+* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v13.4.0.53#xlsio){:target="_blank"}
+* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v13.4.0.53#xlsio){:target="_blank"}
+* [WinRT Release Notes](/winrt/release-notes/v13.4.0.53#xlsio){:target="_blank"}
+* [Windows Phone Release Notes](/wp8/release-notes/wp-winrt/v13.4.0.53#xlsio){:target="_blank"}
+* [UWP Release Notes](/uwp/release-notes/v13.4.0.53#xlsio){:target="_blank"}
+* [Windows Forms Release Notes](/windowsforms/release-notes/v13.4.0.53#xlsio){:target="_blank"}
+* [WPF Release Notes](/wpf/release-notes/v13.4.0.53#xlsio){:target="_blank"}
+* [Xamarin.Forms Release Notes](/xamarin/release-notes/xamarin-forms/v13.4.0.53#xlsio){:target="_blank"}
