--- a/File-Formats/Release-Notes/v13.4.0.58.md
+++ b/File-Formats/Release-Notes/v13.4.0.58.md
@@ -7,10 +7,9 @@ documentation: ug
 ---
 
 # Essential Studio File Formats v13.4.0.58
-<div class="release-date">
-	<i class="fa fa-calendar"></i>
-	<span class="date">February 12, 2016</span>
-</div>
+
+{% include release-info.html date="February 12, 2016" version="v13.4.0.58" %} 
+
 ## DocIO
 
 * [ASP.NET Release Notes](/aspnet/release-notes/v13.4.0.58#docio){:target="_blank"}
