--- a/File-Formats/Release-Notes/v13.4.0.53.md
+++ b/File-Formats/Release-Notes/v13.4.0.53.md
@@ -8,6 +8,8 @@ documentation: ug
 
 # Essential Studio File Formats v13.4.0.53
 
+{% include release-info.html date="January 13, 2016" version="v13.4.0.53" %} 
+
 ## DocIO
 
 * [ASP.NET Release Notes](/aspnet/release-notes/v13.4.0.53#docio){:target="_blank"}
