--- a/File-Formats/Release-Notes/v13.4.0.63.md
+++ b/File-Formats/Release-Notes/v13.4.0.63.md
@@ -1,13 +1,13 @@
 
 ---
-title: Essential Studio File Formats 2015 Vol 4(Service Pack 2) Release Notes
-description: Essential Studio File Formats  2015 Vol 4 (Service Pack 2) Release Notes
+title: Essential Studio File Formats 2015 Vol 4 Service Pack 2 Release Notes
+description: Essential Studio File Formats  2015 Vol 4  Service Pack 2 Release Notes
 platform: file-formats
 control: Release Notes
 documentation: ug
 ---
 
-# Essential Studio File Formats v13.4.0.63
+# Essential Studio for  File Formats v13.4.0.63
 
 {% include release-info.html date="March 4, 2016" version="v13.4.0.63" %} 
 
