--- a/File-Formats/Release-Notes/v13.4.0.63.md
+++ b/File-Formats/Release-Notes/v13.4.0.63.md
@@ -1,7 +1,7 @@
 
 ---
-title: Essential Studio File Formats 2015 Vol 4 Service Pack 2 Release Notes
-description: Essential Studio File Formats  2015 Vol 4  Service Pack 2 Release Notes
+title: Essential Studio for File Formats 2015 Vol 4 Service Pack 2 Release Notes
+description: Essential Studio for File Formats  2015 Vol 4  Service Pack 2 Release Notes
 platform: file-formats
 control: Release Notes
 documentation: ug
