Added link for Xamarin.Forms and UWP platform release notes for Presentation.

--- a/File-Formats/Release-Notes/v14.1.0.41.md
+++ b/File-Formats/Release-Notes/v14.1.0.41.md
@@ -44,6 +44,8 @@ documentation: ug
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v14.1.0.41#presentation){:target="_blank"}
 * [Windows Forms Release Notes](/windowsforms/release-notes/v14.1.0.41#presentation){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v14.1.0.41#presentation){:target="_blank"}
+* [UWP Release Notes](/uwp/release-notes/v14.1.0.41#presentation){:target="_blank"}
+* [Xamarin.Forms Release Notes](/xamarin/release-notes/xamarin-forms/v14.1.0.41#presentation){:target="_blank"}
 
 ## XlsIO
 
