--- a/File-Formats/Release-Notes/v14.2.0.28.md
+++ b/File-Formats/Release-Notes/v14.2.0.28.md
@@ -22,6 +22,8 @@ documentation: ug
 * [Windows Forms Release Notes](/windowsforms/release-notes/v14.2.0.28#docio){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v14.2.0.28#docio){:target="_blank"}
 * [Xamarin.Forms Release Notes](/xamarin/release-notes/v14.2.0.28#docio){:target="_blank"}
+* [Xamarin.Android Release Notes](/xamarin-android/release-notes/v14.2.0.28#docio){:target="_blank"}
+* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/v14.2.0.28#docio){:target="_blank"}
 
 ## PDF
 
@@ -37,6 +39,8 @@ documentation: ug
 * [Xamarin.Forms Release Notes](/xamarin/release-notes/v14.2.0.28#pdf){:target="_blank"}
 * [Xamarin.Android Release Notes](/xamarin-android/release-notes/v14.2.0.28#pdf){:target="_blank"}
 * [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/v14.2.0.28#pdf){:target="_blank"}
+* [Xamarin.Android Release Notes](/xamarin-android/release-notes/v14.2.0.28#pdf){:target="_blank"}
+* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/v14.2.0.28#pdf){:target="_blank"}
 
 ## Presentation
 
@@ -46,6 +50,8 @@ documentation: ug
 * [WPF Release Notes](/wpf/release-notes/v14.2.0.28#presentation){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v14.2.0.28#presentation){:target="_blank"}
 * [Xamarin.Forms Release Notes](/xamarin/release-notes/v14.2.0.28#presentation){:target="_blank"}
+* [Xamarin.Android Release Notes](/xamarin-android/release-notes/v14.2.0.28#presentation){:target="_blank"}
+* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/v14.2.0.28#presentation){:target="_blank"}
 
 ## XlsIO
 
@@ -59,3 +65,5 @@ documentation: ug
 * [Windows Forms Release Notes](/windowsforms/release-notes/v14.2.0.28#xlsio){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v14.2.0.28#xlsio){:target="_blank"}
 * [Xamarin.Forms Release Notes](/xamarin/release-notes/v14.2.0.28#xlsio){:target="_blank"}
+* [Xamarin.Android Release Notes](/xamarin-android/release-notes/v14.2.0.28#xlsio){:target="_blank"}
+* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/v14.2.0.28#xlsio){:target="_blank"}
