--- a/File-Formats/Release-Notes/v14.2.0.32.md
+++ b/File-Formats/Release-Notes/v14.2.0.32.md
@@ -8,7 +8,7 @@ documentation: ug
 
 # Essential Studio File Formats v14.2.0.32
 
-{% include release-info.html date="July 29, 2016" version="v14.2.0.32" %} 
+{% include release-info.html date=site.2016vol2_sp2_releasedate  version="v14.2.0.32" %} 
 
 ## DocIO
 
