--- a/File-Formats/Release-Notes/v14.3.0.49.md
+++ b/File-Formats/Release-Notes/v14.3.0.49.md
@@ -1,14 +1,12 @@
 ---
-title: Essential Studio File Formats 2016 Vol 3 Release Notes
-description: Essential Studio File Formats  2016 Vol 3 Release Notes
-platform: file-formats
-control: Release Notes
-documentation: ug
+title		: Essential Studio for File Formats 2016 Vol 3 Release Notes
+description	: Essential Studio for File Formats 2016 Vol 3 Release Notes
+platform	: file-formats
 ---
 
-# Essential Studio File Formats {{ site.releaseversion.2016_vol_3  }}
+# Essential Studio for File Formats Release Notes
 
-{% include release-info.html date=site.releaseversion.2016_vol_3 version=site.releaseversion.2016_vol_3 %} 
+{% include release-info.html date=site.releaseversion.2016_vol_3 version=site.version.2016_vol_3 %} 
 
 ## DocIO
 
