DOCINFRA-1049-Need to do the Release Notes Modification in all version of Release Notes for File Format has been committed.

--- a/File-Formats/Release-Notes/v13.4.0.53.md
+++ b/File-Formats/Release-Notes/v13.4.0.53.md
@@ -1,12 +1,10 @@
 ---
-title: Essential Studio File Formats 2015 Vol 4 Release Notes
-description: Essential Studio File Formats  2015 Vol 4 Release Notes
-platform: file-formats
-control: Release Notes
-documentation: ug
+title       : Essential Studio File Formats 2015 Vol 4 Release Notes
+description : Essential Studio File Formats  2015 Vol 4 Release Notes
+platform    : file-formats
 ---
 
-# Essential Studio File Formats v13.4.0.53
+# Essential Studio File Formats Release Notes
 
 {% include release-info.html date="January 13, 2016" version="v13.4.0.53" %} 
 
