--- a/File-Formats/Release-Notes/v13.4.0.58.md
+++ b/File-Formats/Release-Notes/v13.4.0.58.md
@@ -1,12 +1,10 @@
 ---
-title: Essential Studio File Formats 2015 Vol 4(Service Pack 1) Release Notes
-description: Essential Studio File Formats  2015 Vol 4 (Service Pack 1) Release Notes
-platform: file-formats
-control: Release Notes
-documentation: ug
+title       : Essential Studio File Formats 2015 Vol 4(Service Pack 1) Release Notes
+description : Essential Studio File Formats  2015 Vol 4 (Service Pack 1) Release Notes
+platform    : file-formats
 ---
 
-# Essential Studio File Formats v13.4.0.58
+# Essential Studio File Formats Release Notes
 
 {% include release-info.html date="February 12, 2016" version="v13.4.0.58" %} 
 
