--- a/File-Formats/Release-Notes/v13.4.0.63.md
+++ b/File-Formats/Release-Notes/v13.4.0.63.md
@@ -1,12 +1,10 @@
 ---
-title: Essential Studio for File Formats 2015 Vol 4 Service Pack 2 Release Notes
-description: Essential Studio for File Formats  2015 Vol 4  Service Pack 2 Release Notes
-platform: file-formats
-control: Release Notes
-documentation: ug
+title       : Essential Studio for File Formats 2015 Vol 4 Service Pack 2 Release Notes
+description : Essential Studio for File Formats  2015 Vol 4  Service Pack 2 Release Notes
+platform    : file-formats
 ---
 
-# Essential Studio for  File Formats v13.4.0.63
+# Essential Studio for  File Formats Release Notes
 
 {% include release-info.html date="March 4, 2016" version="v13.4.0.63" %} 
 
