--- a/File-Formats/Release-Notes/v14.2.0.26.md
+++ b/File-Formats/Release-Notes/v14.2.0.26.md
@@ -1,12 +1,10 @@
 ---
-title: Essential Studio File Formats 2016 Vol 2 Release Notes
-description: Essential Studio File Formats  2016 Vol 2 Release Notes
-platform: file-formats
-control: Release Notes
-documentation: ug
+title       : Essential Studio File Formats 2016 Vol 2 Release Notes
+description : Essential Studio File Formats  2016 Vol 2 Release Notes
+platform    : file-formats
 ---
 
-# Essential Studio File Formats v14.2.0.26
+# Essential Studio File Formats Release Notes
 
 {% include release-info.html date="June 23, 2016" version="v14.2.0.26" %} 
 
