--- a/File-Formats/Release-Notes/v14.1.0.41.md
+++ b/File-Formats/Release-Notes/v14.1.0.41.md
@@ -1,12 +1,10 @@
 ---
-title: Essential Studio File Formats 2016 Vol 1 Release Notes
-description: Essential Studio File Formats  2016 Vol 1 Release Notes
-platform: file-formats
-control: Release Notes
-documentation: ug
+title       : Essential Studio File Formats 2016 Vol 1 Release Notes
+description : Essential Studio File Formats  2016 Vol 1 Release Notes
+platform    : file-formats
 ---
 
-# Essential Studio File Formats v14.1.0.41
+# Essential Studio File Formats Release Notes
 
 {% include release-info.html date="April 04, 2016" version="v14.1.0.41" %} 
 
