--- a/File-Formats/Release-Notes/v15.1.0.33.md
+++ b/File-Formats/Release-Notes/v15.1.0.33.md
@@ -14,6 +14,7 @@ platform	: file-formats
 * [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v15.1.0.33#docio){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.1.0.33#docio){:target="_blank"}
 * [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v15.1.0.33#docio){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.1.0.33#docio){:target="_blank"}
 * [WinRT Release Notes](/winrt/release-notes/v15.1.0.33#docio){:target="_blank"}
 * [Windows Phone Release Notes](/wp8/release-notes/wp-winrt/v15.1.0.33#docio){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v15.1.0.33#docio){:target="_blank"}
@@ -29,6 +30,7 @@ platform	: file-formats
 * [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v15.1.0.33#pdf){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.1.0.33#pdf){:target="_blank"}
 * [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v15.1.0.33#pdf){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.1.0.33#pdf){:target="_blank"}
 * [WinRT Release Notes](/winrt/release-notes/v15.1.0.33#pdf){:target="_blank"}
 * [Windows Phone Release Notes](/wp8/release-notes/wp-winrt/v15.1.0.33#pdf){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v15.1.0.33#pdf){:target="_blank"}
@@ -42,6 +44,7 @@ platform	: file-formats
 
 * [ASP.NET Release Notes](/aspnet/release-notes/v15.1.0.33#presentation){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.1.0.33#presentation){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.1.0.33#presentation){:target="_blank"}
 * [Windows Forms Release Notes](/windowsforms/release-notes/v15.1.0.33#presentation){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v15.1.0.33#presentation){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v15.1.0.33#presentation){:target="_blank"}
@@ -55,6 +58,7 @@ platform	: file-formats
 * [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v15.1.0.33#xlsio){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.1.0.33#xlsio){:target="_blank"}
 * [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v15.1.0.33#xlsio){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.1.0.33#xlsio){:target="_blank"}
 * [WinRT Release Notes](/winrt/release-notes/v15.1.0.33#xlsio){:target="_blank"}
 * [Windows Phone Release Notes](/wp8/release-notes/wp-winrt/v15.1.0.33#xlsio){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v15.1.0.33#xlsio){:target="_blank"}
