issue in date display for release notes are corrected.

--- a/File-Formats/Release-Notes/v15.1.0.33.md
+++ b/File-Formats/Release-Notes/v15.1.0.33.md
@@ -6,7 +6,7 @@ platform	: file-formats
 
 # Essential Studio for File Formats Release Notes
 
-{% include release-info.html date=site.releaseversion.2017_vol_1 version=site.version.2017_vol_1 %} 
+{% include release-info.html date=site.releasedate.2017_vol_1 version=site.version.2017_vol_1 %} 
 
 ## DocIO
 
