--- a/File-Formats/Release-Notes/v14.3.0.49.md
+++ b/File-Formats/Release-Notes/v14.3.0.49.md
@@ -6,7 +6,7 @@ platform	: file-formats
 
 # Essential Studio for File Formats Release Notes
 
-{% include release-info.html date=site.releaseversion.2016_vol_3 version=site.version.2016_vol_3 %} 
+{% include release-info.html date=site.releasedate.2016_vol_3 version=site.version.2016_vol_3 %} 
 
 ## DocIO
 
