Added link for ASP.NET Core release notes of File format products.

--- a/File-Formats/Release-Notes/v15.1.0.x.md
+++ b/File-Formats/Release-Notes/v15.1.0.x.md
@@ -14,6 +14,7 @@ platform	: file-formats
 * [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v15.1.0.x#docio){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.1.0.x#docio){:target="_blank"}
 * [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v15.1.0.x#docio){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.1.0.x#docio){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v15.1.0.x#docio){:target="_blank"}
 * [Windows Forms Release Notes](/windowsforms/release-notes/v15.1.0.x#docio){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v15.1.0.x#docio){:target="_blank"}
@@ -27,6 +28,7 @@ platform	: file-formats
 * [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v15.1.0.x#pdf){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.1.0.x#pdf){:target="_blank"}
 * [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v15.1.0.x#pdf){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.1.0.x#pdf){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v15.1.0.x#pdf){:target="_blank"}
 * [Windows Forms Release Notes](/windowsforms/release-notes/v15.1.0.x#pdf){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v15.1.0.x#pdf){:target="_blank"}
@@ -38,6 +40,7 @@ platform	: file-formats
 
 * [ASP.NET Release Notes](/aspnet/release-notes/v15.1.0.x#presentation){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.1.0.x#presentation){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.1.0.x#presentation){:target="_blank"}
 * [Windows Forms Release Notes](/windowsforms/release-notes/v15.1.0.x#presentation){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v15.1.0.x#presentation){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v15.1.0.x#presentation){:target="_blank"}
@@ -51,6 +54,7 @@ platform	: file-formats
 * [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v15.1.0.x#xlsio){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.1.0.x#xlsio){:target="_blank"}
 * [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v15.1.0.x#xlsio){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.1.0.x#xlsio){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v15.1.0.x#xlsio){:target="_blank"}
 * [Windows Forms Release Notes](/windowsforms/release-notes/v15.1.0.x#xlsio){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v15.1.0.x#xlsio){:target="_blank"}
