Aspnet-core platform release notes links added for DocIo , PDF and Xlsio controls

--- a/File-Formats/Release-Notes/v15.1.0.41.md
+++ b/File-Formats/Release-Notes/v15.1.0.41.md
@@ -11,6 +11,7 @@ platform	: file-formats
 ## DocIO
 
 * [ASP.NET Release Notes](/aspnet/release-notes/v15.1.0.41#docio){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.1.0.41#docio){:target="_blank"}
 * [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v15.1.0.41#docio){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.1.0.41#docio){:target="_blank"}
 * [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v15.1.0.41#docio){:target="_blank"}
@@ -24,6 +25,7 @@ platform	: file-formats
 ## PDF
 
 * [ASP.NET Release Notes](/aspnet/release-notes/v15.1.0.41#pdf){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.1.0.41#pdf){:target="_blank"}
 * [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v15.1.0.41#pdf){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.1.0.41#pdf){:target="_blank"}
 * [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v15.1.0.41#pdf){:target="_blank"}
@@ -48,6 +50,7 @@ platform	: file-formats
 ## XlsIO
 
 * [ASP.NET Release Notes](/aspnet/release-notes/v15.1.0.41#xlsio){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.1.0.41#xlsio){:target="_blank"}
 * [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v15.1.0.41#xlsio){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.1.0.41#xlsio){:target="_blank"}
 * [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v15.1.0.41#xlsio){:target="_blank"}
