--- a/File-Formats/Release-Notes/v15.1.0.41.md
+++ b/File-Formats/Release-Notes/v15.1.0.41.md
@@ -39,6 +39,7 @@ platform	: file-formats
 ## Presentation
 
 * [ASP.NET Release Notes](/aspnet/release-notes/v15.1.0.41#presentation){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.1.0.41#presentation){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.1.0.41#presentation){:target="_blank"}
 * [Windows Forms Release Notes](/windowsforms/release-notes/v15.1.0.41#presentation){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v15.1.0.41#presentation){:target="_blank"}
