--- a/File-Formats/Release-Notes/v15.3.0.26.md
+++ b/File-Formats/Release-Notes/v15.3.0.26.md
@@ -10,54 +10,54 @@ platform	: file-formats
 
 ## DocIO
 
-* [ASP.NET Release Notes](/aspnet/release-notes/15.3.0.26#docio){:target="_blank"}
-* [ASP.NET Core Release Notes](/aspnet-core/release-notes/15.3.0.26#docio){:target="_blank"}
-* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/15.3.0.26#docio){:target="_blank"}
-* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/15.3.0.26#docio){:target="_blank"}
-* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/15.3.0.26#docio){:target="_blank"}
-* [UWP Release Notes](/uwp/release-notes/15.3.0.26#docio){:target="_blank"}
-* [Windows Forms Release Notes](/windowsforms/release-notes/15.3.0.26#docio){:target="_blank"}
-* [WPF Release Notes](/wpf/release-notes/15.3.0.26#docio){:target="_blank"}
-* [Xamarin.Forms Release Notes](/xamarin/release-notes/15.3.0.26#docio){:target="_blank"}
-* [Xamarin.Android Release Notes](/xamarin-android/release-notes/15.3.0.26#docio){:target="_blank"}
-* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/15.3.0.26#docio){:target="_blank"}
+* [ASP.NET Release Notes](/aspnet/release-notes/v15.3.0.26#docio){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.3.0.26#docio){:target="_blank"}
+* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v15.3.0.26#docio){:target="_blank"}
+* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.3.0.26#docio){:target="_blank"}
+* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v15.3.0.26#docio){:target="_blank"}
+* [UWP Release Notes](/uwp/release-notes/v15.3.0.26#docio){:target="_blank"}
+* [Windows Forms Release Notes](/windowsforms/release-notes/v15.3.0.26#docio){:target="_blank"}
+* [WPF Release Notes](/wpf/release-notes/v15.3.0.26#docio){:target="_blank"}
+* [Xamarin.Forms Release Notes](/xamarin/release-notes/v15.3.0.26#docio){:target="_blank"}
+* [Xamarin.Android Release Notes](/xamarin-android/release-notes/v15.3.0.26#docio){:target="_blank"}
+* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/v15.3.0.26#docio){:target="_blank"}
 
 ## PDF
 
-* [ASP.NET Release Notes](/aspnet/release-notes/15.3.0.26#pdf){:target="_blank"}
-* [ASP.NET Core Release Notes](/aspnet-core/release-notes/15.3.0.26#pdf){:target="_blank"}
-* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/15.3.0.26#pdf){:target="_blank"}
-* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/15.3.0.26#pdf){:target="_blank"}
-* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/15.3.0.26#pdf){:target="_blank"}
-* [UWP Release Notes](/uwp/release-notes/15.3.0.26#pdf){:target="_blank"}
-* [Windows Forms Release Notes](/windowsforms/release-notes/15.3.0.26#pdf){:target="_blank"}
-* [WPF Release Notes](/wpf/release-notes/15.3.0.26#pdf){:target="_blank"}
-* [Xamarin.Forms Release Notes](/xamarin/release-notes/15.3.0.26#pdf){:target="_blank"}
-* [Xamarin.Android Release Notes](/xamarin-android/release-notes/15.3.0.26#pdf){:target="_blank"}
-* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/15.3.0.26#pdf){:target="_blank"}
+* [ASP.NET Release Notes](/aspnet/release-notes/v15.3.0.26#pdf){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.3.0.26#pdf){:target="_blank"}
+* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v15.3.0.26#pdf){:target="_blank"}
+* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.3.0.26#pdf){:target="_blank"}
+* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v15.3.0.26#pdf){:target="_blank"}
+* [UWP Release Notes](/uwp/release-notes/v15.3.0.26#pdf){:target="_blank"}
+* [Windows Forms Release Notes](/windowsforms/release-notes/v15.3.0.26#pdf){:target="_blank"}
+* [WPF Release Notes](/wpf/release-notes/v15.3.0.26#pdf){:target="_blank"}
+* [Xamarin.Forms Release Notes](/xamarin/release-notes/v15.3.0.26#pdf){:target="_blank"}
+* [Xamarin.Android Release Notes](/xamarin-android/release-notes/v15.3.0.26#pdf){:target="_blank"}
+* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/v15.3.0.26#pdf){:target="_blank"}
 
 ## Presentation
 
-* [ASP.NET Release Notes](/aspnet/release-notes/15.3.0.26#presentation){:target="_blank"}
-* [ASP.NET Core Release Notes](/aspnet-core/release-notes/15.3.0.26#presentation){:target="_blank"}
-* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/15.3.0.26#presentation){:target="_blank"}
-* [Windows Forms Release Notes](/windowsforms/release-notes/15.3.0.26#presentation){:target="_blank"}
-* [WPF Release Notes](/wpf/release-notes/15.3.0.26#presentation){:target="_blank"}
-* [UWP Release Notes](/uwp/release-notes/15.3.0.26#presentation){:target="_blank"}
-* [Xamarin.Forms Release Notes](/xamarin/release-notes/15.3.0.26#presentation){:target="_blank"}
-* [Xamarin.Android Release Notes](/xamarin-android/release-notes/15.3.0.26#presentation){:target="_blank"}
-* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/15.3.0.26#presentation){:target="_blank"}
+* [ASP.NET Release Notes](/aspnet/release-notes/v15.3.0.26#presentation){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.3.0.26#presentation){:target="_blank"}
+* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.3.0.26#presentation){:target="_blank"}
+* [Windows Forms Release Notes](/windowsforms/release-notes/v15.3.0.26#presentation){:target="_blank"}
+* [WPF Release Notes](/wpf/release-notes/v15.3.0.26#presentation){:target="_blank"}
+* [UWP Release Notes](/uwp/release-notes/v15.3.0.26#presentation){:target="_blank"}
+* [Xamarin.Forms Release Notes](/xamarin/release-notes/v15.3.0.26#presentation){:target="_blank"}
+* [Xamarin.Android Release Notes](/xamarin-android/release-notes/v15.3.0.26#presentation){:target="_blank"}
+* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/v15.3.0.26#presentation){:target="_blank"}
 
 ## XlsIO
 
-* [ASP.NET Release Notes](/aspnet/release-notes/15.3.0.26#xlsio){:target="_blank"}
-* [ASP.NET Core Release Notes](/aspnet-core/release-notes/15.3.0.26#xlsio){:target="_blank"}
-* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/15.3.0.26#xlsio){:target="_blank"}
-* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/15.3.0.26#xlsio){:target="_blank"}
-* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/15.3.0.26#xlsio){:target="_blank"}
-* [UWP Release Notes](/uwp/release-notes/15.3.0.26#xlsio){:target="_blank"}
-* [Windows Forms Release Notes](/windowsforms/release-notes/15.3.0.26#xlsio){:target="_blank"}
-* [WPF Release Notes](/wpf/release-notes/15.3.0.26#xlsio){:target="_blank"}
-* [Xamarin.Forms Release Notes](/xamarin/release-notes/15.3.0.26#xlsio){:target="_blank"}
-* [Xamarin.Android Release Notes](/xamarin-android/release-notes/15.3.0.26#xlsio){:target="_blank"}
-* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/15.3.0.26#xlsio){:target="_blank"}
+* [ASP.NET Release Notes](/aspnet/release-notes/v15.3.0.26#xlsio){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v15.3.0.26#xlsio){:target="_blank"}
+* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v15.3.0.26#xlsio){:target="_blank"}
+* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v15.3.0.26#xlsio){:target="_blank"}
+* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v15.3.0.26#xlsio){:target="_blank"}
+* [UWP Release Notes](/uwp/release-notes/v15.3.0.26#xlsio){:target="_blank"}
+* [Windows Forms Release Notes](/windowsforms/release-notes/v15.3.0.26#xlsio){:target="_blank"}
+* [WPF Release Notes](/wpf/release-notes/v15.3.0.26#xlsio){:target="_blank"}
+* [Xamarin.Forms Release Notes](/xamarin/release-notes/v15.3.0.26#xlsio){:target="_blank"}
+* [Xamarin.Android Release Notes](/xamarin-android/release-notes/v15.3.0.26#xlsio){:target="_blank"}
+* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/v15.3.0.26#xlsio){:target="_blank"}
