--- a/File-Formats/Release-Notes/v16.2.0.46.md
+++ b/File-Formats/Release-Notes/v16.2.0.46.md
@@ -28,22 +28,30 @@ Please refer to this <a href="/common/essential-studio/licensing/license-key">he
 ## DocIO
 
 * [ASP.NET Release Notes](/aspnet/release-notes/v16.2.0.46#docio){:target="_blank"}
+* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v16.2.0.46#docio){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v16.2.0.46#docio){:target="_blank"}
+* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v16.2.0.46#docio){:target="_blank"}
 * [ASP.NET Core Release Notes](/aspnet-core/release-notes/v16.2.0.46#docio){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v16.2.0.46#docio){:target="_blank"}
 * [Windows Forms Release Notes](/windowsforms/release-notes/v16.2.0.46#docio){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v16.2.0.46#docio){:target="_blank"}
-
+* [Xamarin.Forms Release Notes](/xamarin/release-notes/v16.2.0.46#docio){:target="_blank"}
+* [Xamarin.Android Release Notes](/xamarin-android/release-notes/v16.2.0.46#docio){:target="_blank"}
+* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/v16.2.0.46#docio){:target="_blank"}
 
 ## PDF
 
 * [ASP.NET Release Notes](/aspnet/release-notes/v16.2.0.46#pdf){:target="_blank"}
+* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v16.2.0.46#pdf){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v16.2.0.46#pdf){:target="_blank"}
+* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v16.2.0.46#pdf){:target="_blank"}
 * [ASP.NET Core Release Notes](/aspnet-core/release-notes/v16.2.0.46#pdf){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v16.2.0.46#pdf){:target="_blank"}
 * [Windows Forms Release Notes](/windowsforms/release-notes/v16.2.0.46#pdf){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v16.2.0.46#pdf){:target="_blank"}
-
+* [Xamarin.Forms Release Notes](/xamarin/release-notes/v16.2.0.46#pdf){:target="_blank"}
+* [Xamarin.Android Release Notes](/xamarin-android/release-notes/v16.2.0.46#pdf){:target="_blank"}
+* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/v16.2.0.46#pdf){:target="_blank"}
 
 ## Presentation
 
@@ -53,13 +61,20 @@ Please refer to this <a href="/common/essential-studio/licensing/license-key">he
 * [Windows Forms Release Notes](/windowsforms/release-notes/v16.2.0.46#presentation){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v16.2.0.46#presentation){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v16.2.0.46#presentation){:target="_blank"}
-
+* [Xamarin.Forms Release Notes](/xamarin/release-notes/v16.2.0.46#presentation){:target="_blank"}
+* [Xamarin.Android Release Notes](/xamarin-android/release-notes/v16.2.0.46#presentation){:target="_blank"}
+* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/v16.2.0.46#presentation){:target="_blank"}
 
 ## XlsIO
 
 * [ASP.NET Release Notes](/aspnet/release-notes/v16.2.0.46#xlsio){:target="_blank"}
+* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v16.2.0.46#xlsio){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v16.2.0.46#xlsio){:target="_blank"}
+* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v16.2.0.46#xlsio){:target="_blank"}
 * [ASP.NET Core Release Notes](/aspnet-core/release-notes/v16.2.0.46#xlsio){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v16.2.0.46#xlsio){:target="_blank"}
 * [Windows Forms Release Notes](/windowsforms/release-notes/v16.2.0.46#xlsio){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v16.2.0.46#xlsio){:target="_blank"}
+* [Xamarin.Forms Release Notes](/xamarin/release-notes/v16.2.0.46#xlsio){:target="_blank"}
+* [Xamarin.Android Release Notes](/xamarin-android/release-notes/v16.2.0.46#xlsio){:target="_blank"}
+* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/v16.2.0.46#xlsio){:target="_blank"}
