--- a/File-Formats/Release-Notes/v16.3.0.21.md
+++ b/File-Formats/Release-Notes/v16.3.0.21.md
@@ -7,7 +7,7 @@ documentation: ug
 
 # Essential Studio for File Formats Release Notes 
 
-{% include release-info.html date=site.releasedate.2018_vol_3_beta  version="v16.3.0.21" %} 
+{% include release-info.html date=site.releasedate.2018_vol_3  version="v16.3.0.21" %} 
 
 <style>
     #license {
