--- a/File-Formats/Release-Notes/v16.3.0.35.md
+++ b/File-Formats/Release-Notes/v16.3.0.35.md
@@ -7,7 +7,7 @@ documentation: ug
 
 # Essential Studio for File Formats  Release Notes
 
-{% include release-info.html date=November 23, 2018  version="v16.3.0.35" %} 
+{% include release-info.html date="November 23, 2018"  version="v16.3.0.35" %} 
 
 <style>
     #license {
