--- a/File-Formats/Release-Notes/v16.4.0.47.md
+++ b/File-Formats/Release-Notes/v16.4.0.47.md
@@ -7,7 +7,7 @@ documentation: ug
 
 # Essential Studio for File Formats  Release Notes  
 
-{% include release-info.html date="January 16th 2019"  version="v16.4.0.47" %} 
+{% include release-info.html date="January 16, 2019"  version="v16.4.0.47" %} 
 
 ## DocIO
 
