DOCINFRA-1987 added the suffix beta to the older release notes version v17.1.0.32

--- a/File-Formats/Release-Notes/v17.1.0.32.md
+++ b/File-Formats/Release-Notes/v17.1.0.32.md
@@ -5,7 +5,7 @@ platform : file-formats
 documentation: ug
 ---
 
-# Essential Studio for File Formats  Release Notes  
+# Essential Studio for File Formats  Release Notes (Beta) 
 
 {% include release-info.html date=site.releasedate.2019_vol_1_beta  version="v17.1.0.32" %} 
 
