DOCINFRA-1987 added the suffix beta to the older release notes version v17.1.0.32

--- a/File-Formats/Release-Notes/v17.1.0.38.md
+++ b/File-Formats/Release-Notes/v17.1.0.38.md
@@ -1,13 +1,13 @@
 ---
-title : Essential Studio for File Formats 2019 Volume 1 Main release Release Notes  
-description : Essential Studio for File Formats 2019 Volume 1 Main release Release Notes  
+title : Essential Studio for File Formats Weekly Nuget Release Release Notes  
+description : Essential Studio for File Formats Weekly Nuget Release Release Notes  
 platform : file-formats
 documentation: ug
 ---
 
 # Essential Studio for File Formats  Release Notes  
 
-{% include release-info.html date=site.releasedate.2019_vol_1_main version="v17.1.0.38" %} 
+{% include release-info.html date="March 27, 2019" version="v17.1.0.38" %} 
 
 ## DocIO
 
