DOCINFRA-2056 updated the release date to August 22, 2019

--- a/File-Formats/Release-Notes/v17.2.0.46.md
+++ b/File-Formats/Release-Notes/v17.2.0.46.md
@@ -1,13 +1,13 @@
 ---
-title : Essential Studio for File Formats 2019 volume 2 SP1 release Release Notes  
-description : Essential Studio for File Formats 2019 volume 2 SP1 release Release Notes  
+title : Essential Studio for File Formats 2019 volume 2 SP1 Release Notes  
+description : Essential Studio for File Formats 2019 volume 2 SP1 Release Notes  
 platform : file-formats
 documentation: ug
 ---
 
 # Essential Studio for File Formats  Release Notes  
 
-{% include release-info.html date="August 21, 2019" version="v17.2.0.46" %} 
+{% include release-info.html date="August 22, 2019" version="v17.2.0.46" %} 
 
 ## DocIO
 
